# weeb-cli

./: .gitignore  CONTRIBUTING.md  Dockerfile.restful  Makefile  README-DE.md  README-EN.md  README-PL.md  README-TR.md  README.md  TANITIM-EN.md  TANITIM.md  docker-compose.restful.yml  et --soft HEAD~1  mkdocs.yml  publish.py  pyproject.toml  requirements-docs.txt  requirements.txt
.github/: CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: plugin_submission.md
.github/md/en/: linkedin.md  reddit.md  twitter.md
.github/md/tr/: linkedin.md  reddit.md  twitter.md
.github/workflows/: docs.yml  plugin_validation.yml  publish.yml  release.yml  tests.yml
data/ornek_plugin/: README.md  manifest.json  plugin.weeb
distribution/aur/: PKGBUILD
distribution/chocolatey/: weeb-cli.0.0.1.nupkg  weeb-cli.0.1.0.nupkg  weeb-cli.nuspec
distribution/chocolatey/tools/: chocolateyInstall.ps1
distribution/homebrew/: .gitkeep
distribution/scoop/: .gitkeep
distribution/winget/: .gitkeep
docs/: docker-compose.restful.yml  docker-compose.torznab.yml  index.de.md  index.md  index.pl.md  index.tr.md
docs/api/: overview.de.md  overview.md  overview.pl.md  overview.tr.md  sdk.de.md  sdk.md  sdk.pl.md  sdk.tr.md
docs/api/commands/: api.de.md  api.md  api.pl.md  api.tr.md  downloads.de.md  downloads.md  downloads.pl.md  downloads.tr.md  search.de.md  search.md  search.pl.md  search.tr.md  watchlist.de.md  watchlist.md  watchlist.pl.md  watchlist.tr.md
docs/api/core/: config.de.md  config.md  config.pl.md  config.tr.md  exceptions.de.md  exceptions.md  exceptions.pl.md  (+5 more)
docs/cli/: api-mode.de.md  api-mode.md  api-mode.pl.md  api-mode.tr.md  commands.de.md  commands.md  commands.pl.md  commands.tr.md  restful-api.de.md  restful-api.md  restful-api.pl.md  restful-api.tr.md  serve-mode.de.md  serve-mode.md  serve-mode.pl.md  serve-mode.tr.md
docs/development/: adding-providers.de.md  adding-providers.md  adding-providers.pl.md  adding-providers.tr.md  architecture.de.md  architecture.md  architecture.pl.md  architecture.tr.md  contributing.de.md  contributing.md  contributing.pl.md  contributing.tr.md  plugins.de.md  plugins.md  plugins.pl.md  plugins.tr.md  testing.de.md  testing.md  testing.pl.md  testing.tr.md
docs/examples/: README.md  restful_api_client.js  sdk_example.py
docs/getting-started/: configuration.de.md  configuration.md  configuration.pl.md  configuration.tr.md  installation.de.md  installation.md  installation.pl.md  installation.tr.md  quickstart.de.md  quickstart.md  quickstart.pl.md  quickstart.tr.md
docs/user-guide/: downloading.de.md  downloading.md  downloading.pl.md  downloading.tr.md  library.de.md  library.md  library.pl.md  library.tr.md  searching.de.md  searching.md  searching.pl.md  searching.tr.md  settings.de.md  settings.md  settings.pl.md  settings.tr.md  streaming.de.md  streaming.md  streaming.pl.md  streaming.tr.md  trackers.de.md  trackers.md  trackers.pl.md  trackers.tr.md
examples/: PLUGINS.md  README.md  build_plugin.py  restful_api_client.py
examples/sample-plugin/: manifest.json  provider.py
infra/otel-proxy/: .dev.vars.example  package.json  wrangler.toml
md/de/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
md/pl/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
md/tr/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
plugin_gallery/: index.html
plugin_gallery/css/: style.css
plugin_gallery/js/: gallery.js
plugins/sample-plugin/: main.py  manifest.json
tests/: __init__.py  conftest.py  test_anilist_tracker.py  test_aniworld_provider.py  test_api.py  test_cache.py  test_exceptions.py  test_kitsu_tracker.py  test_mal_tracker.py  test_plugin_manager.py  test_providers.py  test_restful_api.py  test_sanitizer.py  test_sanitizer_security.py  test_sdk.py
weeb_cli/: __init__.py  __main__.py  config.py  constants.py  exceptions.py  i18n.py  main.py  sdk.py
weeb_cli/commands/: __init__.py  api.py  downloads.py  hello.py  library.py  search.py  serve.py  serve_restful.py  settings.py  setup.py  watchlist.py
weeb_cli/locales/: de.json  en.json  fr.json  pl.json  tr.json
weeb_cli/plugins/: __init__.py  manager.py  parser.py  sandbox.py  validator.py
weeb_cli/providers/: __init__.py  animecix.py  anizle.py  base.py  hianime.py  registry.py  turkanime.py
weeb_cli/services/: __init__.py  _base.py  _tracker_base.py  aniskip.py  api.py  cache.py  database.py  dependency_manager.py  details.py  downloader.py  error_handler.py  headless_downloader.py  local_library.py  logger.py  notifier.py  player.py  plugin_manager.py  progress.py  scraper.py  search.py  stream_validator.py  telemetry.py  tracker.py  updater.py  watch.py
weeb_cli/templates/: anilist_error.html  anilist_success.html  mal_error.html  mal_success.html
weeb_cli/ui/: __init__.py  app.py  header.py  menu.py  prompt.py
weeb_cli/utils/: __init__.py  decorators.py  plugin_builder.py  sanitizer.py  shortcuts.py
weeb_landing/: index.html
weeb_landing/vhs/: demo-full.tape  demo-menu.tape  demo-search.tape  demo.tape
(+133 files in other folders)
