[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weeb-cli"
version = "2.13.2"
description = "No browser, no ads, no distractions. Just you and an unparalleled anime viewing experience."
readme = "README.md"
authors = [{ name = "ewgsta", email = "ewgst@proton.me" }]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = ["terminal", "anime", "tui", "crossplatform", "anime-download", "turkanime", "anizm", "anime-watch", "aniwatch", "anime-cli", "ani-cli", "openanime", "allanime", "hianime", "anitr-cli", "animecix", "anime-indir", "anime-izle", "weeb-cli", "katsuanime"]
requires-python = ">=3.12"
dependencies = [
    "typer[all]",
    "rich",
    "questionary",
    "requests",
    "packaging",
    "beautifulsoup4",
    "lxml",
    "pycryptodome",
    "curl_cffi",
    "appdirs",
    "prompt_toolkit>=3.0.36,<3.0.53",
    "pyfiglet",
    "py7zr",
    "pypresence",
    "winotify; sys_platform == 'win32'"
]

[project.optional-dependencies]
serve = ["flask>=3.0", "pyyaml>=6.0"]
serve-restful = ["flask>=3.0", "flask-cors>=4.0"]
dev = ["build", "pyinstaller", "pytest>=7.0.0", "pytest-cov", "pytest-asyncio", "pytest-mock"]

[tool.setuptools.packages.find]
where = ["."]
include = ["weeb_cli*"]

[tool.setuptools.package-data]
weeb_cli = ["locales/*.json", "templates/*.html"]

[project.urls]
Homepage = "https://weeb-cli.ewgsta.me"
Repository = "https://github.com/ewgsta/weeb-cli"
Issues = "https://github.com/ewgsta/weeb-cli/issues"

[project.scripts]
weeb-cli = "weeb_cli.main:app"
