[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weeb-cli"
version = "2.16.3"
description = "No browser, no ads, no distractions. Just you and an unparalleled anime viewing experience."
readme = "README.md"
authors = [{ name = "ewgsta", email = "ewgst@proton.me" }]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = ["terminal", "anime", "tui", "crossplatform", "anime-download", "turkanime", "anizm", "anime-watch", "aniwatch", "anime-cli", "ani-cli", "openanime", "allanime", "hianime", "anitr-cli", "animecix", "anime-indir", "anime-izle", "weeb-cli", "katsuanime"]
requires-python = ">=3.12"
dependencies = [
    "typer[all]",
    "rich",
    "questionary",
    "requests",
    "packaging",
    "beautifulsoup4",
    "lxml",
    "pycryptodome",
    "curl_cffi",
    "appdirs",
    "prompt_toolkit>=3.0.36,<3.0.53",
    "pyfiglet",
    "py7zr",
    "pypresence",
    "winotify; sys_platform == 'win32'"
]

[project.optional-dependencies]
serve = ["flask>=3.0", "pyyaml>=6.0"]
serve-restful = ["flask>=3.0", "flask-cors>=4.0"]
shortcuts = ["pywin32; sys_platform == 'win32'", "winshell; sys_platform == 'win32'"]
dev = ["build", "pyinstaller", "pytest>=7.0.0", "pytest-cov>=7.1.0", "pytest-asyncio>=1.3.0", "pytest-mock>=3.15.1"]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.7.6", "mkdocstrings[python]>=1.0.4", "pymdown-extensions>=10.21.2", "mkdocs-static-i18n>=1.3.1"]
telemetry = [
    "opentelemetry-api>=1.25.0,<2.0",
    "opentelemetry-sdk>=1.25.0,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0,<2.0",
    "opentelemetry-instrumentation-requests>=0.46b0,<1.0",
    "opentelemetry-instrumentation-urllib3>=0.46b0,<1.0",
    "opentelemetry-instrumentation-sqlite3>=0.46b0,<1.0",
    "opentelemetry-instrumentation-flask>=0.46b0,<1.0",
    "opentelemetry-instrumentation-logging>=0.46b0,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["weeb_cli*"]

[tool.setuptools.package-data]
weeb_cli = ["locales/*.json", "templates/*.html"]

[project.urls]
Homepage = "https://weeb-cli.ewgsta.me"
Repository = "https://github.com/ewgsta/weeb-cli"
Issues = "https://github.com/ewgsta/weeb-cli/issues"

[project.scripts]
weeb-cli = "weeb_cli.main:app"
